--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -50,10 +50,10 @@
         <ul id="browser" class="navAside">
 
           <li class="closed"><a href="#">Trang chủ</a></li>
-          <li class="closed"><a href="trans.jsp?cat=0">Giao dịch</a></li>
-          <li class="closed"><a href="#">Liên hệ</a></li>
+     
           <li class="closed"><a href="/login">Đăng Nhập</a></li>
           <li class="closed"><a href="/register">Đăng Kí</a></li>
+          <li class="closed"><a href="laixuat.html">Lãi Xuất</a></li>
         </ul>
       </div>
       <!--end .aside-->
