--- a/views/partials/templatefooter.ejs
+++ b/views/partials/templatefooter.ejs
@@ -14,6 +14,7 @@
                         <nav class="link">
                             <ul>
                                 <li class="item"><a href="#" title="title">Giới thiệu</a></li>
+                              
                                 <li class="item"><a href="#" title="title">Ban
                                         lãnh đạo</a></li>
                                 <li class="item"><a href="#" title="title">Tin tức</a></li>
@@ -64,13 +65,15 @@
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2">
                     <div class="footer-link">
-                        <h3 class="title">Tin Tức</h3>
+                        <h3 class="title">Liên Hệ</h3>
                         <nav class="link">
                             <ul>
-                                <li class="item"><a href="#" title="title">Tin
-                                        ShibaBank</a></li>
-                                <li class="item"><a href="#" title="title">Tin khuyến
-                                        mãi</a></li>
+                                <li class="item"><a href="#" title="title">Địa chỉ: 227 Nguyễn Văn Cừ,P.4,Q.5, TP HCM
+                                </a></li>
+                                <li class="item"><a href="#" title="title">SDT: 0969323317
+                                        </a></li>
+                                <li class="item"><a href="#" title="title">Gmail: thnghiep.17ck1@gmail.com
+                                        </a></li>
                             </ul>
                         </nav>
                     </div>
