--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -25,6 +25,9 @@
                     <a class="nav-link py-0"  style="margin-top: 8px; margin-left: 30px;" href="/profile"><span>Thông tin tài khoản</span></a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link py-0"  style="margin-top: 8px; margin-left: 30px;" href="/accountSave"><span>Tài khoản tiết kiệm</span></a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link py-0"  style="margin-top: 8px; margin-left: 30px;" href="/transactionHistory"><span>Liệt kê giao dịch trực tiếp</span></a>
                   </li>
                 </ul>
