--- a/views/partials/verifyMoney.ejs
+++ b/views/partials/verifyMoney.ejs
@@ -25,7 +25,7 @@
                     <p>Số tiền chuyển: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
                         value="<%= transaction.Money %>" disabled> </p>
                     <p>Phí chuyển: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-                        value="2.200 VNĐ" disabled></p>
+                        value="<%= fee.fee %>" disabled></p>
                     <p>Nội dung:  <input type="text" class="form-control" id="accountNumber" name="accountNumber"
                         value="<%= transaction.content %>" disabled></p>
                 </div>
