--- a/views/partials/nonTermSaving.ejs
+++ b/views/partials/nonTermSaving.ejs
@@ -6,8 +6,13 @@
 <br />
 <hr />
 <h1 style="text-align: center;">Gửi tiết kiệm không có kỳ hạn</h1>
-<h5>Số tài khoản: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-    value="<%= bank.accountNumber %>" disabled>  </h5>
+<h5>Tên chủ tài khoản: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+    value="<%= currentUser.displayName %>" disabled>  </h5>
+<h5>Email: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+    value="<%= currentUser.email %>" disabled>  </h5>
+<h5>Số dư hiện tại: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+    value="<%= bank.defaultMoney %> VNĐ" disabled>  </h5>
+    
 <hr>
 <br />
 <hr />
