--- a/views/partials/termSaving.ejs
+++ b/views/partials/termSaving.ejs
@@ -6,15 +6,19 @@
 <br />
 <hr />
 <h1 style="text-align: center;">Gửi tiết kiệm có kỳ hạn</h1>
-<h5>Số tài khoản: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-    value="<%= bank.accountNumber %>" disabled>  </h5>
+<h5>Tên chủ tài khoản: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+    value="<%= currentUser.displayName %>" disabled>  </h5>
+<h5>Email: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+    value="<%= currentUser.email %>" disabled>  </h5>
+<h5>Số dư hiện tại: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+    value="<%= bank.defaultMoney %> VNĐ" disabled>  </h5>
+    
 <hr>
 <br />
 <hr />
 <div class="row">
     <div class="col-md-7" style=" border-right:double ; ">
         <div class="container"> 
-            <p><%= war %></p>
             <form action="" method="post">
                 <label for="">Kỳ hạn</label>
                 <select class="form-control" name="term">
