--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -28,7 +28,7 @@
     <div class="wrapper">
       <div class="logo">
         <a title="ShibaBank" href="#"><img src="../images/logo.png" /></a>
-        <h1>Ngân Hàng ShibaBank</h1>
+        <h1 style="font-family: Blippo, fantasy;">Ngân Hàng ShibaBank</h1>
       </div>
       <!--end .logo-->
       <br class="clear">
