--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image:url(./images/maunen1.jpg);">
 	<!-- Title -->
-<h1 style="font-family: 'Times New Roman', Times, serif;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng ShibaBank</h1>
+<h1 style="font-family: Blippo, fantasy;;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng ShibaBank</h1>
 
 <div class="container" id="container">
 	<!-- form login -->
