--- a/views/partials/ToolRight.ejs
+++ b/views/partials/ToolRight.ejs
@@ -1,4 +1,4 @@
-<div class="mReg right_mReg">
+<div class="mReg right_mReg dobong1" style="margin-bottom: 1vw; border-radius: 0 5vw 0 6vw; background-image: linear-gradient(to bottom right, rgba(66, 1, 1, 0.486), rgb(253, 253, 253));">
   <hr>
     <div class="helpSer">
       <h3>Công Cụ</h3>
@@ -27,3 +27,11 @@
     </div>
   </hr>
   </div>
+
+
+  <style>
+    .dobong1{
+        box-shadow: 6px 6px 6px rgba(37, 1, 1, 0.521);
+        padding: 2vw;
+    }
+</style>
