--- a/views/partials/nonTermSaving.ejs
+++ b/views/partials/nonTermSaving.ejs
@@ -17,7 +17,7 @@
 <br />
 <hr />
 <div class="row">
-    <div class="col-md-7" style=" border-right:double ; ">
+    <div class="col-md-7">
         <div class="container">
             <p><%= war %></p>
             <form action="" method="post">
