--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -20,7 +20,7 @@
 
 <body style="background-image: linear-gradient(to bottom right, rgb(66, 1, 1), rgb(253, 253, 253));">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Internet Banking</a>
+        <a class="navbar-brand" style="font-family: Blippo, fantasy;color:  #000000;font-size: 25px; font-weight: normal;" href="/home">Internet Banking </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/accountNumber">Thông tin tài khoản</a>
                    
-                      <a class="dropdown-item" href="/">Lịch sử giao dịch</a>
+                      <a class="dropdown-item" href="#">Lịch sử giao dịch</a>
                     </div>
                   </li>
                   <li class="nav-item">
@@ -62,3 +62,5 @@
     </nav>
     <div style="margin-left: 2vw; margin-right: 2vw; background-image: linear-gradient(to bottom right, rgb(233, 231, 231), rgba(255, 255, 255, 0.822)); ">
         <div class="row" style="margin-top: 0">
+
+            
