--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -1,13 +1,13 @@
-<div class="col-md-3" style="border-right:double ;">
-    <div>
+<div class="col-md-3" style="border-right:double ; ">
+    <div >
       <img src="../images/logo.png"
-        style="width: 100px; height: 80px; margin: auto; margin-top: 10px; margin-bottom: 10px; display: block;">
-      <h1 style="font-size: 30px; text-align: center;">ShibaBank</h1>
+        style="width: 100px; height: 80px; margin: auto; padding-top: 10px; margin-bottom: 10px; display: block;">
+      <h1 style="font-family: Blippo, fantasy;color:  #AF1E40;font-size: 50px; font-weight: normal; text-align: center;">ShibaBank</h1>
       <p style="text-align: center;color:brown; font-size: 14px;" >(Dịch vụ Internet Banking)</p>
       <br />
       <hr />
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid dobong">
       <div class="row">
         <div class="col-12 collapse show d-md-flex pt-2 pl-0 min-vh-100" id="sidebar">
           <ul class="nav flex-column flex-nowrap overflow-hidden">
@@ -57,5 +57,4 @@
   
 </div>
 <div class="col-md-9">
-
 
