--- a/views/pages/forgotpassword.ejs
+++ b/views/pages/forgotpassword.ejs
@@ -5,7 +5,7 @@
 <link rel="icon" href="https://f0.pngfuel.com/png/982/55/white-laptop-icon-png-clip-art.png">
 <link href="css/pages/account.css" rel='stylesheet' type='text/css' media="all" />
 <body>
-    <h1>Ngân Hàng Shiba Bank</h1>
+    <h1 style= "font-family: Blippo, fantasy;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng Shiba Bank</h1>
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
 		<form method="POST" >
