--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -5,7 +5,7 @@
 <link rel="icon" href="https://f0.pngfuel.com/png/982/55/white-laptop-icon-png-clip-art.png">
 <link href="css/pages/account.css" rel='stylesheet' type='text/css' media="all" />
 <body style="background-image:url(./images/maunen1.jpg);">
-    <h1 style="font-family: 'Times New Roman', Times, serif;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng Shiba Bank</h1>
+    <h1 style="font-family: Blippo, fantasy; color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng Shiba Bank</h1>
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
 		<form method="POST">
