--- a/views/pages/verification.ejs
+++ b/views/pages/verification.ejs
@@ -6,7 +6,7 @@
 <link href="css/pages/account.css" rel='stylesheet' type='text/css' media="all" />
 </head>
 <body style="background-image:url(./images/maunen1.jpg);">
-    <h1 style="font-family: 'Times New Roman', Times, serif;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng Shiba Bank</h1>
+    <h1 style="font-family: Blippo, fantasy;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng Shiba Bank</h1>
 
 <div class="container" id="container">
 	<!-- form login -->
