--- a/views/partials/termSaving.ejs
+++ b/views/partials/termSaving.ejs
@@ -17,7 +17,7 @@
 <br />
 <hr />
 <div class="row">
-    <div class="col-md-7" style=" border-right:double ; ">
+    <div class="col-md-7">
         <div class="container"> 
             <form action="" method="post">
                 <label for="">Kỳ hạn</label>
