--- a/views/partials/transfers.ejs
+++ b/views/partials/transfers.ejs
@@ -4,47 +4,53 @@
 
 <%- include ('templateright.ejs') -%>
 <br />
-<hr/>
+<hr />
 <h1 style="text-align: center;">Thông tin người chuyển</h1>
 <div class="form-group">
-                    
+
     <h5 for="accountNumber">Tài khoản nguồn</h5>
-    <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-        value="<%= bank.accountNumber %>" disabled>
+    <input type="text" class="form-control" id="accountNumber" name="accountNumber" value="<%= bank.accountNumber %>"
+        disabled>
     <samp>Số dư khả dụng: <%= bank.defaultMoney %> VNĐ</samp>
 </div>
-<br/>
-<hr/>
+<br />
+<hr />
 <div class="row">
-    <div class="col-md-7" style=" border-right:double ; ">
+    <div class="col-md-7">
         <div class="container">
             <form method="POST" action="">
                 <div class="form-group">
                     <h5>Thông tin người hưởng</h5>
                     <br>
-                    <input type="text" class="form-control "  name="beneficiary" id="beneficiary"
+                    <input type="text" class="form-control " name="beneficiary" id="beneficiary"
                         placeholder="Tài khoản đích/ VND">
                 </div>
                 <div class="form-group">
                     <h5>Thông tin giao dịch</h5>
-                    <input type="number" class="form-control" name="money" id="money" placeholder="Số tiền (VND)">
-                </div>
-                <div class="form-group">
-                    <h5 for="">Phí giao dịch</h5>
-                    <select class="form-control" name="charge" id="charge">
-                        <option value="1">Người chuyển trả</option>
-                        <option value="2">Người nhận trả</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" name="content" id="content" rows="3" placeholder="Nội dung"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
+                    <div class="input-group">
+                        <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)"
+                            name="money" id="money" placeholder="Số tiền (VND)">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">VNĐ</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <h5 for="">Phí giao dịch</h5>
+                        <select class="form-control" name="charge" id="charge">
+                            <option value="1">Người chuyển trả</option>
+                            <option value="2">Người nhận trả</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="content" id="content" rows="3"
+                            placeholder="Nội dung"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
             </form>
         </div>
-        
+
     </div>
-    
+</div>
     <div class="col-md-4" style="margin-top: 10vw; margin-left: 2vw;">
         <%- include ('ToolRight.ejs') -%>
     </div>
