--- a/views/partials/verifyMoney.ejs
+++ b/views/partials/verifyMoney.ejs
@@ -9,7 +9,7 @@
 <hr/>
 <br/>
 <div class="row" >
-    <div class="col-md-7" style=" border-right:double ;">
+    <div class="col-md-7">
         <div class="container">
             <form method="POST">
                 <div class="form-group">
