--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -32,24 +32,26 @@
                     <a class="nav-link" href="/home">Trang chủ <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản</a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản ▾</a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/accountNumber">Thông tin tài khoản</a>
                    
-                      <a class="dropdown-item" href="#">Lịch sử giao dịch</a>
+                      <a class="dropdown-item" href="changepassword">Bảo mật</a>
                     </div>
                   </li>
                   <li class="nav-item">
                     <a href="/transfers" class="nav-link">Chuyển tiền</a>
                 </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gửi Tiết Kiệm ▾</a>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="/termSaving">Có thời hạn</a>
+                   
+                      <a class="dropdown-item" href="/nonTermSaving">Không có thời hạn</a>
+                    </div>
+                  </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Thanh toán</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Tín dụng</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Tiết kiệm</a>
+                    <a href="/transactionHistory" class="nav-link">Lịch sử giao dịch</a>
                 </li>
                
                 
