--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -3,7 +3,7 @@
       <img src="../images/logo.png"
         style="width: 100px; height: 80px; margin: auto; padding-top: 10px; margin-bottom: 10px; display: block;">
       <h1 style="font-family: Blippo, fantasy;color:  #AF1E40;font-size: 50px; font-weight: normal; text-align: center;">ShibaBank</h1>
-      <p style="text-align: center;color:brown; font-size: 14px;" >(Dịch vụ Internet Banking)</p>
+      <p style="text-align: center;color:brown; font-size: 14px; text-shadow: rgb(51, 2, 2) -1px -2px 0.5em;" >(Dịch vụ Internet Banking)</p>
       <br />
       <hr />
     </div>
@@ -47,8 +47,7 @@
               </li>
               <li class="nav-item"><a class="nav-link text-truncate" href="/changepassword"><i class="fa fa-bar-chart"></i> <span
                 class="d-none d-sm-inline">Quản Lí Mật Khẩu</span></a></li>
-            <li class="nav-item"><a class="nav-link text-truncate" href="#"><i class="fa fa-download"></i> <span
-                  class="d-none d-sm-inline">Export</span></a></li>
+            
           </ul>
         </div>
         
