--- a/views/partials/termSaving.ejs
+++ b/views/partials/termSaving.ejs
@@ -20,7 +20,7 @@
     <div class="col-md-7">
         <div class="container"> 
             <form action="" method="post">
-                <label for="">Kỳ hạn</label>
+                <label for=""> <h5>Kỳ hạn: </h5></label>
                 <select class="form-control" name="term">
                     <option value="1">3 tháng</option>
                     <option value="2">6 tháng</option>
@@ -28,7 +28,16 @@
                 </select>
                 <br>
                 <br>
-                <input class="form-control" type="text" name="money" id="money" placeholder="Số tiền gửi">
+                <h5>Số tiền gửi: </h5>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="money" name="money" placeholder="Số tiền gửi">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">VNĐ</span>
+                    </div>
+                  </div>
+                  <br/>
+                  <hr/>
+                  <!-- <button type="submit" class="btn btn-primary mb-2"> Gửi </button> -->
                 <input class="form-control" type="submit" value="Gửi">
             </form>
         </div>
