--- a/views/partials/accountSave.ejs
+++ b/views/partials/accountSave.ejs
@@ -27,11 +27,12 @@
             <hr>
             <h5>Kỳ hạn gửi:<input type="text" class="form-control" id="accountNumber" name="accountNumber"
                 value="<% if (s.term === 0 ) { %> <%= "Không kỳ hạn" %> <% } else%><% if (s.term === 1 ){ %> <%= "Kỳ hạn 3 tháng" %> <% }else %><% if (s.term === 2 ) { %> <%= "Kỳ hạn 6 tháng" %> <% } %><% if (s.term === 2 ){ %> <%= "Kỳ hạn 9 tháng" %> <% }else %><% if (s.term === 2 ) { %> <%= "A" %> <% } %> %><% if (s.term === 3 ){ %> <%= "Kỳ hạn 1 năm" %> <% } %><% if (s.term === 2 ) { %> <%= "A" %> <% } %>" disabled>  </h5>
-            <hr>
-            <h5>Lãi suất hiện tại:<input type="text" class="form-control" id="accountNumber" name="accountNumber"
-                value="<%= s.finalize %>" disabled>  </h5>
             <% if (s.finalize == false) { %>
+            <hr>
+                <h5>Lãi suất hiện tại:<input type="text" class="form-control" id="accountNumber" name="accountNumber" value="<%= s.interest %>" disabled>  </h5>
             <a href="/accountSave/<%=s.code %>" >Tất Toán</a>
+            <% } else{ %>
+                <h5>Tổng lãi suất:<input type="text" class="form-control" id="accountNumber" name="accountNumber" value="<%= s.interest %>" disabled>  </h5>
             <% } %>
         </div>
     </div>
