--- a/views/partials/changepassword.ejs
+++ b/views/partials/changepassword.ejs
@@ -5,7 +5,7 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div>
-    <h1>Thay Đổi Mật Khẩu</h1>
+    <h1 style="text-align: center;">Thay Đổi Mật Khẩu</h1>
     <br />
     <hr />
 </div>
@@ -15,6 +15,7 @@
     <div>
         <div class="container">
             <form method="POST" action="">
+                <div style="margin-left:11vw;margin-right:11vw;">
                 <div class="form-group">
                     <h5>Mật Khẩu Cũ</h5>
                     <input name="passwordOld" class="form-control" type="password" placeholder="Mật khẩu Cũ" />
@@ -32,8 +33,9 @@
 
                     </div>
                     <hr>
-                    <button type="submit" class="btn btn-primary mb-2">Đổi Mật Khẩu</button>
+                    <button  style="margin-left:17vw;margin-right:11vw;" type="submit" class="btn btn-primary mb-2">Đổi Mật Khẩu</button>
                     </hr>
+                </div>
             </form>
         </div>
     </div>
