--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -5,7 +5,7 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div>
-  <h1>Cập Nhật Thông Tin Tài Khoản</h1>
+  <h1 style="text-align: center;">Cập Nhật Thông Tin Tài Khoản</h1>
   <br />
   <hr />
 </div>
@@ -13,6 +13,7 @@
   <div>
     <div class="container">
       <form method="POST" action="">
+        <div style="margin-left:11vw;margin-right:11vw;">
         <div class="form-group">
           <div>
             <h5 for="">Họ và tên:
@@ -58,8 +59,9 @@
 
           </div>
           <hr>
-          <button type="submit" class="btn btn-primary mb-2">Cập Nhật</button>
+          <button style="margin-left:20vw;margin-right:11vw;" type="submit" class="btn btn-primary mb-2">Cập Nhật</button>
           </hr>
+        </div>
       </form>
     </div>
   </div>
