--- a/views/partials/transfers.ejs
+++ b/views/partials/transfers.ejs
@@ -5,7 +5,7 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <hr />
-<h1 style="text-align: center;">Thông tin người chuyển</h1>
+<h1 style="text-align: center;">Thông Tin Người Chuyển</h1>
 <div class="form-group">
 
     <h5 for="accountNumber">Tài khoản nguồn</h5>
@@ -21,7 +21,7 @@
             <form method="POST" action="">
                 <div class="form-group">
                     <h5>Thông tin người hưởng</h5>
-                    <br>
+                  
                     <input type="text" class="form-control " name="beneficiary" id="beneficiary"
                         placeholder="Tài khoản đích/ VND">
                 </div>
@@ -45,7 +45,7 @@
                         <textarea class="form-control" name="content" id="content" rows="3"
                             placeholder="Nội dung"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
+                    <button style="margin-left:15vw;margin-right:11vw;" type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
             </form>
         </div>
 
