--- a/views/partials/accountSave.ejs
+++ b/views/partials/accountSave.ejs
@@ -5,7 +5,7 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div>
-    <h1>Tài Khoản Tiết Kiệm</h1>
+    <h1 style="text-align: center;">Tài Khoản Tiết Kiệm</h1>
     <br/>
     <hr/>
 </div>
