--- a/views/partials/transactionHistory.ejs
+++ b/views/partials/transactionHistory.ejs
@@ -4,8 +4,14 @@
 
 <%- include ('templateright.ejs') -%>
 <br />
+<div>
+    <h1 style="text-align: center;">Lịch Sử Chuyển Tiền</h1>
+    <br />
+    <hr />
+</div>
+<div  style="margin-left:11vw;margin-right:11vw;" >
 <div class="container">
-    <ul class="list-group">
+    <ul class="list-group" >
         <% History.forEach(function(h){ %>
             <li class="list-group-item active">Mã giao dịch: <%= h.code %> </li>
             <li class="list-group-item">Tài khoản người nhận: <%= h.accountReceiver %></li>
@@ -18,7 +24,10 @@
         <% }); %>
   
        
-    </ul>    
+    </ul>  
+    
+
+</div>
 </div>
 <%- include ('templatefooter.ejs') -%>
 
