--- a/views/partials/notification.ejs
+++ b/views/partials/notification.ejs
@@ -5,7 +5,8 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div class="container">
-    <h3><%= status %> </h3>
+    <h1>a</h1>
+    <img src="<%= bitmap %>" alt="">
 </div>
 
 <%- include ('templatefooter.ejs') -%>
