--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -43,15 +43,9 @@
                   <li class="nav-item">
                     <a href="/transfers" class="nav-link">Chuyển tiền</a>
                 </li>
-                  <li  class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gửi Tiết Kiệm ▾</a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="/termSaving">Có thời hạn</a>
-                   
-                      <a class="dropdown-item" href="/nonTermSaving">Không có thời hạn</a>
-                    </div>
-                   
-                  </li>
+                <li class="nav-item">
+                    <a href="/save" class="nav-link">Gửi tiết kiệm</a>
+                </li>
                 
                 <li class="nav-item">
                     <a href="/transactionHistory" class="nav-link">Lịch sử giao dịch</a>
