--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -33,18 +33,10 @@
                 </ul>
               </div>
             </li>
-              <li class="nav-item">
-                <a class="nav-link collapsed text-truncate" href="#submenu2" data-toggle="collapse"
-                  data-target="#submenu2"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Tiền gửi ▾</span></a>
-                <div class="collapse" id="submenu2" aria-expanded="false">
-                  <ul class="flex-column pl-2 nav">
-                    <li class="nav-item" style="margin-left: 30px;"><a class="nav-link py-0" href="/termSaving"><span>Gửi tiết kiệm có kỳ hạn</span></a></li>
-                    <li class="nav-item">
-                      <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="/nonTermSaving"><span>Gửi tiết kiệm không có kỳ hạn</span></a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="/save"><i class="fa fa-home"></i> <span
+                  class="d-none d-sm-inline">Gửi tiết kiệm</a></span></a>
+            </li>
               <li class="nav-item"><a class="nav-link text-truncate" href="/changepassword"><i class="fa fa-bar-chart"></i> <span
                 class="d-none d-sm-inline">Quản Lí Mật Khẩu</span></a></li>
             
