--- a/views/manage/guestAccount.ejs
+++ b/views/manage/guestAccount.ejs
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+    <h3>Quản lý tài khoản khách hàng</h3>
+    <table class="table table-striped table-dark">
+        <thead>
+          <tr>
+            <th scope="col">Email</th>
+            <th scope="col">Họ và Tên</th>
+            <th scope="col">Thao tác</th>
+          </tr>
+        </thead>
+        <tbody>
+            <% users.forEach(function(user){ %>
+          <tr>
+            <th scope="col"><%= user.email %> </th>
+            <th scope="col"><%= user.displayName %></th>
+            <th scope="col">
+            <% if(user.block === false){ %> 
+            <a href="guestAccount/<%=user.email%>/block">Khóa account</a>
+            <% } else { %>
+            <a href="guestAccount/<%=user.email%>/unblock">Mở account</a>
+            <% }%>
+            </th>
+          </tr>
+          <% }); %>
+        </tbody>
+      </table>
+    </div>
+    </div>
 </body>
 </html>
